<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/upper1" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/upper2" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/lato_black"
        android:text="@string/visiting_card_maker"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/nunito"
        android:text="@string/name"
        android:textColor="@color/DBlue"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <TextView
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="34dp"
        android:fontFamily="@font/nunito"
        android:text="@string/phone_number"
        android:textColor="@color/DBlue"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name" />
    <TextView
        android:id="@+id/birthDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="34dp"
        android:fontFamily="@font/nunito"
        android:text="@string/birth_date"
        android:textColor="@color/DBlue"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/number" />
    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="34dp"
        android:fontFamily="@font/nunito"
        android:text="@string/address"
        android:textColor="@color/DBlue"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/birthDate" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:layout_marginStart="38dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:srcCompat="@drawable/line"
        tools:layout_editor_absoluteX="38dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:layout_marginStart="38dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/number"
        app:srcCompat="@drawable/line"
        tools:layout_editor_absoluteX="38dp" />
    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:layout_marginStart="38dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/birthDate"
        app:srcCompat="@drawable/line"
        tools:layout_editor_absoluteX="38dp" />
    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:layout_marginStart="38dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address"
        app:srcCompat="@drawable/line"
        tools:layout_editor_absoluteX="38dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/sBlue"
        android:onClick="showName"
        android:text="@string/generate"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:cornerRadius="60dp"
        app:layout_constraintBottom_toTopOf="@id/rectBord"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView6" />

    <ImageView
        android:id="@+id/rectBord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="22dp"
        app:layout_constraintBottom_toTopOf="@id/fact"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:srcCompat="@drawable/rectanglebord" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="204dp"
        android:layout_marginBottom="4dp"

        app:layout_constraintBottom_toBottomOf="@+id/rectBord"
        app:layout_constraintLeft_toLeftOf="@+id/rectBord"
        app:layout_constraintTop_toTopOf="@+id/rectBord"
        app:srcCompat="@drawable/rect" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/rectBord"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="@+id/imageView7"
        app:srcCompat="@drawable/rect2" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="42dp"
        app:layout_constraintEnd_toEndOf="@id/rectBord"
        app:layout_constraintTop_toTopOf="@id/rectBord"
        app:srcCompat="@drawable/avatar" />

    <TextView
        android:id="@+id/nameCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="201dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/rectBord"
        app:layout_constraintStart_toStartOf="@+id/rectBord" />

    <TextView
        android:id="@+id/numCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/nunito_bold"
        android:textColor="@color/black"
        android:text="@string/phone_number"
        app:layout_constraintTop_toBottomOf="@id/nameCard"
        app:layout_constraintStart_toStartOf="@+id/rectBord" />

    <TextView
        android:id="@+id/dateCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/nunito_bold"
        android:textColor="@color/black"
        android:text="@string/birth_date"
        app:layout_constraintTop_toBottomOf="@id/numCard"
        app:layout_constraintStart_toStartOf="@+id/rectBord" />

    <TextView
        android:id="@+id/addCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/nunito_bold"
        android:textColor="@color/black"
        android:text="@string/address"
        app:layout_constraintTop_toBottomOf="@id/dateCard"
        app:layout_constraintStart_toStartOf="@+id/rectBord" />

    <TextView
        android:id="@+id/fact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="29dp"
        android:fontFamily="@font/nunito"
        android:text="@string/silly_fact"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectBord" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/eg_david_joy"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="13sp"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="38dp"
         />
    <EditText
        android:id="@+id/editNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/eg_98765432100"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="13sp"
        app:layout_constraintTop_toBottomOf="@+id/number"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="38dp"
         />
    <EditText
        android:id="@+id/editDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:hint="@string/eg_08_06_2002"
        android:textSize="13sp"
        app:layout_constraintTop_toBottomOf="@+id/birthDate"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="38dp"
         />
    <EditText
        android:id="@+id/editAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/eg_13_new_york_street"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="13sp"
        app:layout_constraintTop_toBottomOf="@+id/address"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="38dp"
         />

    <TextView
        android:id="@+id/setName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="38dp"
        android:fontFamily="@font/nunito_bold"
        android:hint="@string/eg_david_joy"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@+id/nameCard"
        app:layout_constraintTop_toTopOf="@id/rectBord" />
    <TextView
        android:id="@+id/setNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/nunito_bold"
        android:hint="@string/eg_98765432100"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@+id/numCard"
        app:layout_constraintTop_toBottomOf="@id/setName" />
        <TextView
        android:id="@+id/setDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/nunito_bold"
        android:hint="@string/eg_08_06_2002"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@+id/dateCard"
        app:layout_constraintTop_toBottomOf="@id/setNum" />
    <TextView
        android:id="@+id/setAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/nunito_bold"
        android:hint="@string/eg_13_new_york_street"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:textSize="12sp"
       app:layout_constraintLeft_toRightOf="@+id/addCard"
        app:layout_constraintTop_toBottomOf="@id/setDate" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="44dp"
        android:layout_height="40dp"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="52dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="@+id/rectBord"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:srcCompat="@drawable/verified" />

</androidx.constraintlayout.widget.ConstraintLayout>